# sensors-rs

./: Cargo.toml  Dockerfile  docker-compose.yml  readme.md  releases.md
src/: commands.rs  endpoints.rs  lib.rs  main.rs  measurement.rs  requests.rs  responses.rs  state.rs
tests/: endpoints.rs
