[package]
name = "sensors"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-web = "4.1.0"
anyhow = "1.0.58"
chrono = "0.4.19"
serde = { version = "1.0", features = ["derive"] }


[[bin]]
name = "sensors"
path = "src/main.rs"

[lib]
name = "sensors"
path = "src/lib.rs"
